I knew it was something like that.

--- a/about.html
+++ b/about.html
@@ -6,10 +6,10 @@ title: About Zombeer.com
 <div class="content">
   <div class="related">
     <h3>
-      This is a blog about zombies making and drinking beer. Crack one open and enjoy.
+      This is a blog about a zombie brewing and reviewing beer. Crack one open and enjoy.
       <br />
       <br />
-      Cheers from Zombeer
+      Cheers from Zombeer.com
     </h3>
   </div>
 </div>
