--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@ title: Zombeer.com
     <ul>
       {% for post in site.posts %}
       <li>
-	<span>{{ post.date | date: "%B %e, %Y" }}</span> <a href="{{ post.url }}">{{ post.title }}</a>
+	{% if post.type == 'Brew' %}
+
+	  <span>{{ post.date | date: "%B %e, %Y" }}</span> <a href="{{ post.url }}">Brew: {{ post.title }}</a>
+	{% if post.type == 'Review' %}
+	  <span>{{ post.date | date: "%B %e, %Y" }}</span> <a href="{{ post.url }}">Review: {{ post.title }}</a>
+	{% else %}
+	  <span>{{ post.date | date: "%B %e, %Y" }}</span> <a href="{{ post.url }}">{{ post.title }}</a>
+	{% endif %}
       </li>
       {% endfor %}
     </ul>
