Add some beers to the tick list. Still have a ton to add

--- a/beers.html
+++ b/beers.html
@@ -14,44 +14,90 @@ title: Beer Tick List
 	  <h4>
 		Asher
 	  </h4>
-	   <br />
+	  Green Lantern Kolsch <br />
 	</p>
 	<p>
 	  <h4>
 		Avery
 	  </h4>
+	  The Beast 2011 <br />
+	  India Pale Ale <br />
+	  Ellie's Brown Ale <br />
+	  Hog Heaven <br />
 	  Joe's Pils <br />
+	  Karma <br />
+	  The Maharaja <br />
+	  Out of Bounds Stout <br />
+	  The Reverend <br />
+	  Salvation <br />
+	  Uncle Jacob’s Stout 2012<br />
+	  White Rascal <br />
 	</p>
 	<p>
 	  <h4>
 		Left Hand
 	  </h4>
-	   <br />
+	  400 Pound Monkey <br />
+	  Black Jack Porter <br />
+	  Fade to Black, Vol. 3 <br />
+	  Good Juju <br />
+	  Milk Stout <br />
+	  Milk Stout Nitro <br />
+	  Polestar Pilsner <br />
+	  Sawtooth Ale <br />
+	  Smokejumper <br />
+	  Stranger Pale Ale <br />
+	  TNT Weizen Doppelbock <br />
+	  Wake Up Dead Stout <br />
 	</p>
 	<p>
 	  <h4>
 		New Belgium
 	  </h4>
-	   <br />
+	  1554 <br />
+	  Biere de Mars <br />
+	  Blue Paddle <br />
+	  Cocoa Mole Ale <br />
+	  Clutch <br />
+	  Dig <br />
+	  Fat Tire <br />
+	  Fresh Hop <br />
+	  Kick <br />
+	  La Folie 2011 <br />
+	  La Folie 2012 <br />
+	  Prickly Passion <br />
+	  Ranger IPA <br />
+	  Shift <br />
+	  Somersault <br />
+	  Sunshine Wheat <br />
+	  Tart Lychee <br />
 	</p>
 	<p>
 	  <h4>
 		Oskar Blues
 	  </h4>
+	  Dale's Pale Ale <br />
 	  Deviant Dale's <br />
+	  G'Knight Imperial Red <br />
+	  Mama's Little Yella Pils <br />
+	  Old Chub <br />
+	  Ten FIDY <br />
 	</p>
 	<p>
 	  <h4>
 		Russian River
 	  </h4>
+	  Beatification <br />
+	  Damnation <br />
 	  Pliney the Elder <br />
 	  Pliney the Younger <br />
+	  Supplication <br />
 	</p>
 	<p>
 	  <h4>
 		Ska
 	  </h4>
-	   <br />
+	  Modus Hoperandi <br />
 	</p>
 	<p>
 	  <h4>
@@ -63,7 +109,10 @@ title: Beer Tick List
 	  <h4>
 		Upslope
 	  </h4>
-	   <br />
+	  Pale Ale <br />
+	  Indian Pale Ale <br />
+	  Brown Ale <br />
+	  Craft Lager <br />
 	</p>
   </div>
 </div>
